# NVIDIA-AcceleratedComputing

./: CMakeLists.txt  Dockerfile  LICENSE.TXT  README.md  sources.cmake  wercker.yml
Histogram/: answers.json
Module10/ImageEqualization/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module10/ListScan/: answers.json  config.json  dataset_generator.cpp  description.markdown
Module12/: sources.cmake
Module12/BfsQueue/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module12/QuickHull/: description.markdown
Module2/DeviceQuery/: answers.json  config.json
Module20/: sources.cmake
Module20/OpenCLVectorAddition/: answers.json  dataset_generator.cpp  description.markdown  questions.json  solution.cpp  sources.cmake  template.cpp
Module21/: sources.cmake
Module21/OpenACCVectorAdd/: PGI_LICENCE_INFO.markdown  answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cpp  sources.cmake  template.cpp
Module24/Mandelbrot_Dynamic/: config.json  dataset_generator.cpp
Module3/: sources.cmake
Module3/ImageBlur/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module3/ImageColorToGrayscale/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module3/ThrustVectorAdd/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module3/VectorAdd/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module4/: sources.cmake
Module4/BasicMatrixMultiplication/: answers.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module4/TiledMatrixMultiplication/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module8/: sources.cmake
Module8/Convolution/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module8/Stencil/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module9/: sources.cmake
Module9/Reduction/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module9/ThrustReduction/: answers.json
TextHistogram/: answers.json
ThrustHistogramSort/: answers.json
VectorAddStream/: answers.json  config.json  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
support/: format_markdown.js  package.json
support/cmake/modules/: FindCUDA.cmake  FindEnableCxx11.cmake
